完成"频道广场"

--- a/index.html
+++ b/index.html
@@ -834,6 +834,247 @@
                     </div>
                 </div>
            </div>
+           <div class="channels">
+               <div class="floor_tit">
+                   <h3 class="floor_title">频道广场</h3>
+               </div>
+               <div class="channels_wrapper">
+                   <div class="channels_item channels_item1">
+                       <a href="#" class="channels_item_link">
+                           <img src="upload/tongzhuang.jpg" alt="" class="channels_item_img">
+                       </a>
+                    </div>
+                   <div class="channels_item channels_item2">
+                       <a href="#" class="channels_item_link">
+                        <img src="upload/jiadian.jpg" alt="" class="channels_item_img">
+                       </a>
+                    </div>
+                   <div class="channels_item channels_item3" style="z-index: 1;">
+                       <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item4">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item5">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item6">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item7">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item8">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item9">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item10">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item11">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item12">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item13">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item14">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item15">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item16">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item17">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+                   <div class="channels_item channels_item18">
+                        <a href="#" class="channels_item_tit">
+                           <span class="channels_item_tit_main">电脑办公</span>
+                           <span class="channels_item_tit_aside">科技潮物 惠享不停</span>
+                       </a>
+                       <div class="channels_item_imgs">
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/dn1.jpg" alt="" class="channels_item_img">
+                           </a>
+                           <a href="#" class="channels_item_img_lk">
+                               <img src="upload/sony.jpg" alt="" class="channels_item_img">
+                           </a>
+                       </div>
+                   </div>
+               </div>
+           </div>
        </div>
    </div>
    <footer>
