完成"为你推荐"模块

--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,210 @@
                    </div>
                </div>
            </div>
+           <div class="feeds">
+                <div class="floor_tit">
+                    <h3 class="floor_title">为你推荐</h3>
+                </div>
+                <div class="feed_tab_wrapper">
+                    <ul class="feed_tab">
+                        <li class="feed_tab_item feed_tab_current">
+                            <span class="feed_tab_tit">精选</span>
+                            <span class="feed_tab_desc">猜你喜欢</span>
+                            <div class="feed_tab_sprit"></div>
+                        </li>
+                        <li class="feed_tab_item">
+                            <span class="feed_tab_tit">智能先锋</span>
+                            <span class="feed_tab_desc">大电器城</span>
+                            <div class="feed_tab_sprit"></div>
+                        </li>
+                        <li class="feed_tab_item">
+                            <span class="feed_tab_tit">居家优品</span>
+                            <span class="feed_tab_desc">品质生活</span>
+                            <div class="feed_tab_sprit"></div>
+                        </li>
+                        <li class="feed_tab_item">
+                            <span class="feed_tab_tit">超市百货</span>
+                            <span class="feed_tab_desc">百货生鲜</span>
+                            <div class="feed_tab_sprit"></div>
+                        </li>
+                        <li class="feed_tab_item">
+                            <span class="feed_tab_tit">时尚达人</span>
+                            <span class="feed_tab_desc">美妆穿搭</span>
+                            <div class="feed_tab_sprit"></div>
+                        </li>
+                        <li class="feed_tab_item">
+                            <span class="feed_tab_tit">进口好物</span>
+                            <span class="feed_tab_desc">京东国际</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="feed_wrapper">
+                    <div>
+                        <ul class="feed_item_list">
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="feed_item">
+                                <a href="#" class="feed_item_lk">
+                                    <div class="feed_item_img_box">
+                                        <img src="upload/feed-item.jpg" alt="" class="feed_item_img">
+                                     </div>
+                                    <p class="feed_item_info">
+                                        <span class="feed_item_symbol">自营</span>
+                                        巧马家纺羽绒被95白鹅绒加厚冬被保暖酒店被子单双人春秋宿舍被芯 蓝+灰 150x200cm8斤加厚冬被
+                                    </p>
+                                    <span class="feed_item_price">
+                                        <i class="feed_price_ico">￥</i>
+                                        <span class="feed_item_price_txt">175.</span>
+                                        <span class="feed_item_price_dec">00</span>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+           </div>
        </div>
    </div>
    <footer>
