--- a/index.html
+++ b/index.html
@@ -295,8 +295,14 @@
                        </ol>
                    </div>
                    <div class="focus_wrapper">
-                       <a class="focus_wrapper_item" href="#"><img src="upload/wrapper-item1.png" alt=""></a>
-                       <a class="focus_wrapper_item" href="#"><img src="upload/wrapper-item2.jpg" alt=""></a>
+                        <a href="#" class="arrow-l"><i class="iconfont"></i></a>
+                        <a href="#" class="arrow-r"><i class="iconfont"></i></a>
+                       <a class="focus_wrapper_item" href="#">
+                           <img src="upload/wrapper-item1.png" alt="">
+                        </a>
+                       <a class="focus_wrapper_item" href="#">
+                           <img src="upload/wrapper-item2.jpg" alt="">
+                        </a>
                        <a class="focus_wrapper_item" href="#"><img src="upload/wrapper-item3.png" alt=""></a>
                    </div>
                </div>
@@ -1130,6 +1136,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1146,6 +1158,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1162,6 +1180,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1178,6 +1202,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1194,6 +1224,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1210,6 +1246,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1226,6 +1268,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1242,6 +1290,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1258,6 +1312,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                             <li class="feed_item">
                                 <a href="#" class="feed_item_lk">
@@ -1274,6 +1334,12 @@
                                         <span class="feed_item_price_dec">00</span>
                                     </span>
                                 </a>
+                                <div class="more_item">
+                                    <div class="more_item_btn">
+                                        <i class="more_item_btn_ico"></i>
+                                        <span class="more_item_btn_txt">找相似</span>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </div>
